smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/syntax-error-token.smithy
// Parse error at line 2, column 1 near `!`: Unexpected syntax
!!!!!!!!!Nope!!!!!!!!!!
